# task-cli

./: .coverage  README.md  coverage.xml  devswarm-compose.yml  pyproject.toml
.agents/guardrails/: immutable-rules.yaml
.github/workflows/: ci.yml
evals/rubrics/: project-rubric.yaml
specs/dependency/: graph.yaml
specs/prd/: philosophy.md
src/: __init__.py  __main__.py  cli.py  models.py  repository.py  storage.py
src/task_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cli.py  test_integration.py  test_models.py  test_repository.py  test_storage.py
